{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 65,
  "lineage": "e3b517d7-f3a4-da92-e4b3-592358736a96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gearbox-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:internet-gateway/igw-01575c4c98ba5176e",
            "id": "igw-01575c4c98ba5176e",
            "owner_id": "819512637580",
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gearbox-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:819512637580:loadbalancer/app/gearbox/d1ebbaea38f76ac9",
            "arn_suffix": "app/gearbox/d1ebbaea38f76ac9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "gearbox-980962066.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:819512637580:loadbalancer/app/gearbox/d1ebbaea38f76ac9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gearbox",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ce16dd36a12eab68"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a17c143483e3ad9"
              },
              {
                "subnet_id": "subnet-04f01a862f69fe958"
              },
              {
                "subnet_id": "subnet-064906ab6bed351c5"
              }
            ],
            "subnets": [
              "subnet-00a17c143483e3ad9",
              "subnet-04f01a862f69fe958",
              "subnet-064906ab6bed351c5"
            ],
            "vpc_id": "vpc-0481de038c6cd06d8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load-balancer-security-group",
            "aws_subnet.gearbox-subnets",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gearbox-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:819512637580:listener/app/gearbox/d1ebbaea38f76ac9/fbc2caff89e4fa50",
            "certificate_arn": "arn:aws:acm:us-east-1:819512637580:certificate/d7a82a5f-cdf6-4edf-aa80-61c36ebffc8c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:819512637580:targetgroup/gearbox-instances/5fe042baa13397d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:819512637580:listener/app/gearbox/d1ebbaea38f76ac9/fbc2caff89e4fa50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:819512637580:loadbalancer/app/gearbox/d1ebbaea38f76ac9",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.gearbox-certificate",
            "aws_acm_certificate_validation.gearbox-certificate-validation",
            "aws_lb.gearbox-load-balancer",
            "aws_lb_target_group.gearbox-instances",
            "aws_security_group.load-balancer-security-group",
            "aws_subnet.gearbox-subnets",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gearbox-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:819512637580:targetgroup/gearbox-instances/5fe042baa13397d3",
            "arn_suffix": "targetgroup/gearbox-instances/5fe042baa13397d3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/hello",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:819512637580:targetgroup/gearbox-instances/5fe042baa13397d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:819512637580:loadbalancer/app/gearbox/d1ebbaea38f76ac9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gearbox-instances",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gearbox-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:route-table/rtb-0b1d8ad57007f6594",
            "id": "rtb-0b1d8ad57007f6594",
            "owner_id": "819512637580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01575c4c98ba5176e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "40.26.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gearbox-internet-gateway",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gearbox-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0811516459ac06a43",
            "route_table_id": "rtb-0b1d8ad57007f6594",
            "subnet_id": "subnet-00a17c143483e3ad9"
          },
          "dependencies": [
            "aws_internet_gateway.gearbox-internet-gateway",
            "aws_route_table.gearbox-route-table",
            "aws_subnet.gearbox-subnets",
            "aws_vpc.gearbox-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03debc65bec31cd02",
            "route_table_id": "rtb-0b1d8ad57007f6594",
            "subnet_id": "subnet-064906ab6bed351c5"
          },
          "dependencies": [
            "aws_internet_gateway.gearbox-internet-gateway",
            "aws_route_table.gearbox-route-table",
            "aws_subnet.gearbox-subnets",
            "aws_vpc.gearbox-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07683ae4e5e34b604",
            "route_table_id": "rtb-0b1d8ad57007f6594",
            "subnet_id": "subnet-04f01a862f69fe958"
          },
          "dependencies": [
            "aws_internet_gateway.gearbox-internet-gateway",
            "aws_route_table.gearbox-route-table",
            "aws_subnet.gearbox-subnets",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gearbox-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:security-group/sg-065c54faf416751ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065c54faf416751ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gearbox-security-group",
            "name_prefix": "",
            "owner_id": "819512637580",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:security-group/sg-0ce16dd36a12eab68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "40.26.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce16dd36a12eab68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "819512637580",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gearbox-allow-all-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1522125570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-065c54faf416751ad",
            "security_group_rule_id": "sgr-06ca9a208409b9a5b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gearbox-security-group",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gearbox-allow-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-949624288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-065c54faf416751ad",
            "security_group_rule_id": "sgr-05ddd0150239c1b13",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gearbox-security-group",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load-balancer-allow-all-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "40.26.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-140836488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ce16dd36a12eab68",
            "security_group_rule_id": "sgr-0ec20537ef77fd6f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer-security-group",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load-balancer-allow-https-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1162463721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce16dd36a12eab68",
            "security_group_rule_id": "sgr-032cd62c86650463b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer-security-group",
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gearbox-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:subnet/subnet-00a17c143483e3ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "40.26.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a17c143483e3ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819512637580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:subnet/subnet-064906ab6bed351c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "40.26.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064906ab6bed351c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819512637580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:subnet/subnet-04f01a862f69fe958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "40.26.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f01a862f69fe958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819512637580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0481de038c6cd06d8"
          },
          "dependencies": [
            "aws_vpc.gearbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gearbox-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819512637580:vpc/vpc-0481de038c6cd06d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.26.0.0/16",
            "default_network_acl_id": "acl-071ecf108c96f05eb",
            "default_route_table_id": "rtb-064c41f30036db6bb",
            "default_security_group_id": "sg-0c2d5f0bc7fd05acd",
            "dhcp_options_id": "dopt-def9c6a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0481de038c6cd06d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064c41f30036db6bb",
            "owner_id": "819512637580"
          }
        }
      ]
    }
  ]
}